--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,486 @@ body {
     font-size: 16px;
     line-height: 22px;
     font-family: "Roboto", "Arial", sans-serif;
+    background: #849d8f url("../img/icecream_first.jpg") no-repeat center top;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  width: 1146px;
+  margin: 0 auto;
+  padding: 0 27px;
+}
+
+.logo {
+  float: left;
+  width: 154px;
+}
+
+.main-header {
+  margin-bottom: 30px;
+  min-height: 95px;
+  color: #ffffff;
+}
+
+.logo {
+  padding: 9px 15px 0 0;
+}
+
+.main-navigation {
+  float: left;
+  width: 695px;
+  min-height: 95px;
+
+}
+
+.main-navigation ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 0;
+}
+
+.main-navigation li {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 18px;
+  vertical-align: top;
+}
+
+.main-navigation a {
+  display: block;
+  padding: 30px 13px;
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+.main-navigation a:hover {
+  background:
+}
+
+.user-blok {
+  float: right;
+  max-width: 300px;
+}
+
+.search {
+  display: inline-block;
+  margin: 23px 5px 18px;
+  width: 33px;
+  height: 33px;
+  border-radius: 100px;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.login {
+  position: relative;
+  display: inline-block;
+  margin: 23px 5px 18px;
+  width: 93px;
+  height: 32px;
+  border-radius: 50px;
+  font-size: 14px;
+  line-height: 16px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+  background: rgba(255, 255, 255, 0.2);
+}
+url(img/login.svg)
+
+.login::before {
+  content: "";
+  position: absolute;
+  top:
+  width: 21px;
+  height: 19px;
+  background: #ff0000;
+}
+
+.basket {
+  display: inline-block;
+  margin: 23px 0px 18px 5px;
+  width: 117px;
+  height: 32px;
+  border-radius: 50px;
+  font-size: 14px;
+  line-height: 16px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+  background: rgba(255, 255, 255, 0.2);
+
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.header-contact{
+  float: right;
+  display: inline-block;
+  width: 267;
+  text-align: right;
+}
+
+.time {
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.phone-number {
+  font-size: 22px;
+  line-height: 24px;
+  font-weight: 900;
+}
+
+.slider {
+  margin-bottom: 40px;
+  height: 450px;
+}
+
+.slider-header{
+  max-width: 700px;
+  margin: 0 auto;
+  padding-top: 190px;
+}
+.slider-header h1 {
+  font-size: 60px;
+  list-style: 60px;
+  font-weight: 900;
+  color: #ffffff;
+  text-align: center;
+}
+
+.btn {
+  display: block;
+  width: 282px;
+  margin: 0 auto 40px;
+  padding: 12px 0 12px;
+  font-size: 32px;
+  line-height: 44px;
+  font-weight: 700;
+  color: #ffffff;
+  border-radius: 100px;
+  text-decoration: none;
+  text-align: center;
+  background-color: #e95038;
+}
+
+.banner-wrapper {
+  margin-bottom: 40px;
+  width: 1146px;
+  max-height: 268px;
+}
+
+.banner-wrapper a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.banner-left {
+  float: left;
+  width: 560px;
+  height: 229px;
+  color: #ffffff;
+  border-radius: 10px;
+  background: url("../img/razz.jpg") no-repeat;
+}
+
+.banner-title {
+  padding: 18px 20px;
+  margin: 0;
+  font-size: 35px;
+  line-height: 41px;
+  font-weight: 700;
+}
+
+.banner-text {
+  margin: 0;
+  padding: 0 20px;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 700;
+}
+
+.banner-link {
+  display: inline-block;
+  padding: 14px 20px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  border-radius: 100px;
+  background: #e95038;
+
+}
+
+.banner-right {
+  float: right;
+  width: 560px;
+  height: 229px;
+  color: #ffffff;
+  border-radius: 10px;
+  background: url("../img/chocolate.jpg") no-repeat;
+}
+
+.product-item {
+  display: inline-block;
+  vertical-align: top;
+  width: 267px;
+  margin-right: 22px;
+}
+
+.hit {
+}
+
+.product-item:last-child {
+  margin-right: 0;
+}
+
+.preview {
+  width: 267px;
+  height: 267px;
+}
+
+.preview img {
+  border-radius: 154px;
+}
+
+.product-item {
+  width: 1146;
+}
+
+.price-title {
+  font-size: 30px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.price {
+  font-size: 45px;
+  line-height: 45px;
+  font-weight: 700;
+  color: #ffffff;
+}
+
+.price-title a {
+  display: block;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+  color: #ffffff;
+  text-decoration: underline;
+  text-align: center;
+}
+
+.advantages {
+  height: 306px;
+  margin-bottom: 40px;
+  color: #323232;
+  border-radius: 10px;
+  background: url("../img/pattern.jpg");
+}
+
+.advantages h3 {
+  margin: 0;
+  padding: 28px 20px 0;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 400px;
+
+}
+
+.block-left {
+  float: left;
+  width: 540px;
+}
+
+.block-right {
+  float: right;
+  width: 540px;
+}
+
+.advantages-item {
+  padding-left: 20px;
+}
+
+.content {
+  margin-bottom: 40px;
+}
+
+.content-left {
+  float: left;
+  width: 560px;
+  height: 220px;
+  border-radius: 15px;
+  background: url("../img/strawberry.jpg")
+}
+
+.content-right {
+  float: right;
+  width: 560px;
+  height: 220px;
+  border-radius: 15px;
+  background: #f8f7f4;
+}
+
+.blog-subtitle {
+  display: block;
+  padding: 25px 0 10px 20px;
+  font-size: 16pc
+  line-height: 22px;
+  color: #323232;
+}
+
+.content-left a {
+  display: block;
+  padding-left: 20px;
+  width: 290px;
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 700;
+  color: #323232;
+  text-decoration: underline;
+}
+
+.newsletter {
+  margin: 0;
+  padding: 36px 27px;
+  color: #5a5a5a;
+}
+
+.newsletter-form {
+  padding: 0 27px;
+}
+
+.map {
+  height: 429px;
+  background: url("../img/map.jpg")
+}
+
+.map-contact {
+  width: 302px;
+  height: 305px;
+  border-radius: 10px;
+  background-color: #ffffff;
+}
+
+.main-footer {
+  margin-top: 20px;
+}
+
+.footer-social {
+  font-size: 0;
+  float: left;
+  width: 267px;
+}
+
+.social-btn {
+  display: inline-block;
+  vertical-align: top;
+  width: 38px;
+  height: 38px;
+  padding-right: 11px;
+}
+
+.social-btn-twitter::before {
+  content: "";
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background: url("../img/tw.svg") no-repeat;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 100px;
+}
+
+.social-btn-instagram::before {
+  content: "";
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background: url("../img/in.svg") no-repeat;
+}
+
+.social-btn-facebook::before {
+  content: "";
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background: url("../img/fb.svg") no-repeat;
+}
+
+.social-btn-vkontakte::before {
+  content: "";
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background: url("../img/vk.svg") no-repeat;
+}
+
+.footer-menu {
+  float: left;
+  width: 350px;
+  height: 40px;
+  font-size: 13px;
+  line-height: 18px;
+}
+
+.footer-menu-item {
+  display: inline-block;
+  width: 140px;
+}
+
+.footer-menu-item:last-child {
+  display: inline-block;
+  width: 170px;
+}
+
+.footer-menu a {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+.copyright {
+  float: right;
+  width: 190px;
+  font-size: 12px;
+  line-height: 18px;
+  color: #ffffff;
+}
+
+.copyright a {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+.copyright::before {
+  content: "";
+  position: absolute;
+  width: 108px;
+  height: 37px;
+  background: url("../img/html_logo.svg") no-repeat;
+}
+
+.copyright p {
+  margin: 0;
+  padding-top: 44px;
+}
+
+h1 {
+  font-weight: 900;
+  font-size: 60px;
+  line-height: 60px;
+}
+h2 {
+  font-weight: bold;
+  font-size: 35px;
+  line-height: 41px;
 }
