--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+ -webkit-box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ box-sizing: border-box;
+}
+
 body {
     min-width: 1200px;
     font-weight: normal;
@@ -12,10 +18,10 @@ img {
   height: auto;
 }
 
-.container {
-  width: 1146px;
-  margin: 0 auto;
-  padding: 0 27px;
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .logo {
@@ -35,7 +41,7 @@ img {
 
 .main-navigation {
   float: left;
-  width: 695px;
+  width: 600px;
   min-height: 95px;
 
 }
@@ -67,24 +73,38 @@ img {
 
 .user-blok {
   float: right;
-  max-width: 300px;
+  margin-top: 24px;
+  max-width: 400px;
+  font-size: 0;
 }
 
 .search {
+  position: relative;
   display: inline-block;
-  margin: 23px 5px 18px;
+  margin-right: 10px;
   width: 33px;
   height: 33px;
-  border-radius: 100px;
+  border-radius: 50px;
   background: rgba(255, 255, 255, 0.2);
+}
+
+.search::before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 8px;
+  width: 17px;
+  height: 17px;
+  background: url("../img/search.svg") no-repeat;
 }
 
 .login {
   position: relative;
   display: inline-block;
-  margin: 23px 5px 18px;
   width: 93px;
   height: 32px;
+  padding: 7px 0 0 43px;
+  margin-right: 10px;
   border-radius: 50px;
   font-size: 14px;
   line-height: 16px;
@@ -93,20 +113,21 @@ img {
   text-decoration: none;
   background: rgba(255, 255, 255, 0.2);
 }
-url(img/login.svg)
 
 .login::before {
   content: "";
   position: absolute;
-  top:
-  width: 21px;
+  top: 6px;
+  left: 16px;
+  width: 20px;
   height: 19px;
-  background: #ff0000;
+  background: url("../img/login.svg");
 }
 
 .basket {
+  position: relative;
   display: inline-block;
-  margin: 23px 0px 18px 5px;
+  padding: 7px 0 0 45px;
   width: 117px;
   height: 32px;
   border-radius: 50px;
@@ -116,19 +137,21 @@ url(img/login.svg)
   color: #ffffff;
   text-decoration: none;
   background: rgba(255, 255, 255, 0.2);
-
 }
 
-.clearfix::after {
+.basket::before {
   content: "";
-  display: table;
-  clear: both;
+  position: absolute;
+  top: 7px;
+  left: 17px;
+  width: 20px;
+  height: 19px;
+  background: url("../img/basket.svg");
 }
 
-.header-contact{
+.header-contact {
   float: right;
-  display: inline-block;
-  width: 267;
+  width: 267px;
   text-align: right;
 }
 
@@ -140,6 +163,7 @@ url(img/login.svg)
 }
 
 .phone-number {
+  display: block;
   font-size: 22px;
   line-height: 24px;
   font-weight: 900;
@@ -147,17 +171,18 @@ url(img/login.svg)
 
 .slider {
   margin-bottom: 40px;
-  height: 450px;
+  height: 464px;
 }
 
-.slider-header{
+.slider-header {
   max-width: 700px;
   margin: 0 auto;
-  padding-top: 190px;
+  padding-top: 196px;
 }
+
 .slider-header h1 {
   font-size: 60px;
-  list-style: 60px;
+  line-height: 60px;
   font-weight: 900;
   color: #ffffff;
   text-align: center;
@@ -191,6 +216,7 @@ url(img/login.svg)
 
 .banner-left {
   float: left;
+  padding: 22px 20px;
   width: 560px;
   height: 229px;
   color: #ffffff;
@@ -199,8 +225,8 @@ url(img/login.svg)
 }
 
 .banner-title {
-  padding: 18px 20px;
   margin: 0;
+  padding-bottom: 20px;
   font-size: 35px;
   line-height: 41px;
   font-weight: 700;
@@ -208,7 +234,7 @@ url(img/login.svg)
 
 .banner-text {
   margin: 0;
-  padding: 0 20px;
+  padding-bottom: 40px;
   font-size: 18px;
   line-height: 22px;
   font-weight: 700;
@@ -216,7 +242,7 @@ url(img/login.svg)
 
 .banner-link {
   display: inline-block;
-  padding: 14px 20px;
+  padding: 11px 22px;
   font-size: 18px;
   line-height: 24px;
   font-weight: 700;
@@ -227,6 +253,7 @@ url(img/login.svg)
 
 .banner-right {
   float: right;
+  padding: 24px 20px;
   width: 560px;
   height: 229px;
   color: #ffffff;
@@ -234,18 +261,27 @@ url(img/login.svg)
   background: url("../img/chocolate.jpg") no-repeat;
 }
 
+.catalog-product {
+  width: 1146px;
+  font-size: 0;
+  margin-bottom: 40px;
+}
+
 .product-item {
+  position: relative;
   display: inline-block;
   vertical-align: top;
   width: 267px;
-  margin-right: 22px;
-}
-
-.hit {
+  margin-right: 26px;
 }
 
 .product-item:last-child {
   margin-right: 0;
+}
+
+.hit {
+  position: relative;
+  z-index: 2;
 }
 
 .preview {
@@ -254,17 +290,19 @@ url(img/login.svg)
 }
 
 .preview img {
+  position: absolute;
+  top: 0px;
   border-radius: 154px;
-}
-
-.product-item {
-  width: 1146;
+  z-index: 1;
 }
 
 .price-title {
+  position: absolute;
+  top: 210px;
   font-size: 30px;
   font-weight: 700;
   color: #ffffff;
+  z-index: 2;
 }
 
 .price {
@@ -278,15 +316,17 @@ url(img/login.svg)
   display: block;
   font-size: 16px;
   line-height: 22px;
-  font-weight: 500;
+  font-weight: 400;
   color: #ffffff;
   text-decoration: underline;
   text-align: center;
 }
 
 .advantages {
+  width: 1146px;
   height: 306px;
   margin-bottom: 40px;
+  padding: 25px 20px;
   color: #323232;
   border-radius: 10px;
   background: url("../img/pattern.jpg");
@@ -294,33 +334,38 @@ url(img/login.svg)
 
 .advantages h3 {
   margin: 0;
-  padding: 28px 20px 0;
   font-size: 24px;
   line-height: 30px;
   font-weight: 400px;
+}
 
+.advantages-item {
+  padding-left: 57px;
 }
 
 .block-left {
+  position: relative;
   float: left;
   width: 540px;
 }
 
-.block-right {
-  float: right;
-  width: 540px;
-}
-
-.advantages-item {
-  padding-left: 20px;
+.block-left::before {
+  position: absolute;
+  top: 7px;
+  content:"";
+  width: 47px;
+  height: 47px;
+  background: url("../img/icecream.svg") no-repeat;
 }
 
 .content {
+  width: 1146px;
   margin-bottom: 40px;
 }
 
 .content-left {
   float: left;
+  padding: 24px 20px;
   width: 560px;
   height: 220px;
   border-radius: 15px;
@@ -329,6 +374,7 @@ url(img/login.svg)
 
 .content-right {
   float: right;
+  padding: 24px 26px;
   width: 560px;
   height: 220px;
   border-radius: 15px;
@@ -337,15 +383,13 @@ url(img/login.svg)
 
 .blog-subtitle {
   display: block;
-  padding: 25px 0 10px 20px;
   font-size: 16pc
   line-height: 22px;
   color: #323232;
 }
 
-.content-left a {
+.blog-title {
   display: block;
-  padding-left: 20px;
   width: 290px;
   font-size: 24px;
   line-height: 30px;
@@ -356,28 +400,79 @@ url(img/login.svg)
 
 .newsletter {
   margin: 0;
-  padding: 36px 27px;
+  padding-bottom: 36px;
+  width: 506px;
   color: #5a5a5a;
 }
 
 .newsletter-form {
-  padding: 0 27px;
+}
+
+.submit {
+  display: inline-block;
+  padding: 11px 22px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  border-radius: 100px;
+  color: #ffffff;
+  background: #e95038;
+  border: none;
+}
+
+#total-field {
+  display: inline-block;
+  margin-right: 12px;
+  width: 356px;
+  height: 44px;
+  border-radius: 5px;
 }
 
 .map {
+  position: relative;
+  width: 1146px;
   height: 429px;
   background: url("../img/map.jpg")
 }
 
 .map-contact {
+  position: absolute;
+  bottom: 62px;
+  right: 27px;
+  padding: 30px 26px;
   width: 302px;
   height: 305px;
-  border-radius: 10px;
+  box-sizing: border-box;
+  border-radius: 5%;
   background-color: #ffffff;
 }
 
+.feedback {
+  display: block;
+  width: 254px;
+  height: 47px;
+  border-radius: 50px;
+  background: #e95038;
+}
+
+.map-contact p {
+  margin: 0;
+}
+
+.map-contact a {
+  box-sizing: border-box;
+  padding-top: 10px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  text-align: center;
+  color: #ffffff;
+  text-decoration: none;
+
+}
+
 .main-footer {
-  margin-top: 20px;
+  padding: 20px 0 22px 0;
 }
 
 .footer-social {
@@ -386,19 +481,23 @@ url(img/login.svg)
   width: 267px;
 }
 
+.footer-social a {
+  margin-right: 13px;
+}
+
 .social-btn {
   display: inline-block;
   vertical-align: top;
-  width: 38px;
-  height: 38px;
+  width: 35px;
+  height: 35px;
   padding-right: 11px;
 }
 
 .social-btn-twitter::before {
   content: "";
   position: absolute;
-  width: 32px;
-  height: 32px;
+  width: 31px;
+  height: 31px;
   background: url("../img/tw.svg") no-repeat;
   border: 2px solid rgba(255, 255, 255, 0.5);
   border-radius: 100px;
@@ -407,38 +506,50 @@ url(img/login.svg)
 .social-btn-instagram::before {
   content: "";
   position: absolute;
-  width: 32px;
-  height: 32px;
+  width: 31px;
+  height: 31px;
   background: url("../img/in.svg") no-repeat;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 100px;
 }
 
 .social-btn-facebook::before {
   content: "";
   position: absolute;
-  width: 32px;
-  height: 32px;
+  width: 31px;
+  height: 31px;
   background: url("../img/fb.svg") no-repeat;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 100px;
 }
 
 .social-btn-vkontakte::before {
   content: "";
   position: absolute;
-  width: 32px;
-  height: 32px;
+  width: 31px;
+  height: 31px;
   background: url("../img/vk.svg") no-repeat;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 100px;
 }
 
 .footer-menu {
   float: left;
-  width: 350px;
+  width: 400px;
   height: 40px;
   font-size: 13px;
   line-height: 18px;
 }
 
+.container {
+  width: 1146px;
+  margin: 0 auto;
+}
+
 .footer-menu-item {
   display: inline-block;
-  width: 140px;
+  width: 120px;
+  margin-left: 20px;
 }
 
 .footer-menu-item:last-child {
